--- a/demos/notes-rest-api/docker-compose.yaml
+++ b/demos/notes-rest-api/docker-compose.yaml
@@ -8,6 +8,6 @@ services:
       - "3306:3306"
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "true"
-      MYSQL_PASSWORD: musquli_password
-      MYSQL_USER: musquli_user
+      MYSQL_PASSWORD: password
+      MYSQL_USER: user
       MYSQL_DATABASE: notes_db
