--- a/demos/notes-rest-api/docker-compose.yaml
+++ b/demos/notes-rest-api/docker-compose.yaml
@@ -10,4 +10,4 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD: "true"
       MYSQL_PASSWORD: password
       MYSQL_USER: user
-      MYSQL_DATABASE: notes_db
+      MYSQL_DATABASE: notes
